--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
 Makefile
 /CMakeFiles
 CMakeCache.txt
-cmake_install_cmake
+cmake_install.cmake
+fischl
+/test/CMakeFiles
+/test/cmake_install.cmake
+/test/CMakeCache.txt
+/test/Makefile
+run_tests
