--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,10 +1,11 @@
-set(TARGET_NAME run_tests)
+set(TARGET_LAYER0 test_layer0)
 
 
 # add test sources here ... 
-add_executable(${TARGET_NAME} 
-
-    ../lib/fischl.cpp 
-    testfischl.cpp
-    
+add_executable(${TARGET_LAYER0}
+    # add need lib and source code here
+    layer0.cpp
 )
+
+# add test to activate ctest -VV
+add_test(NAME ${TARGET_LAYER0} COMMAND sudo ./${TARGET_LAYER0})
