--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -17,6 +17,10 @@ add_executable(${TARGET_LAYER2_API}
     layer2_API.cpp
 )
 
+# Link Google Test to your test executables
+target_link_libraries(${TARGET_LAYER0} gtest gtest_main)
+target_link_libraries(${TARGET_LAYER1_API} gtest gtest_main)
+
 # add test to activate ctest -VV
 add_test(NAME ${TARGET_LAYER0} COMMAND sudo ./${TARGET_LAYER0} ${DIR_PLACE})
 add_test(NAME ${TARGET_LAYER1_API} COMMAND sudo ./${TARGET_LAYER1_API} ${DIR_PLACE})
