--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -16,7 +16,7 @@ add_executable(${TARGET_LAYER1_API}
 add_executable(${TARGET_LAYER2_API}
     ../lib/direntry.cpp
     ../lib/files.cpp
-    layer2_API.cpp
+    layer2_API_dir.cpp
 )
 add_executable(${TARGET_DIR_API}
     ../lib/direntry.cpp
@@ -26,6 +26,7 @@ add_executable(${TARGET_DIR_API}
 # Link Google Test to your test executables
 target_link_libraries(${TARGET_LAYER0} gtest gtest_main)
 target_link_libraries(${TARGET_LAYER1_API} gtest gtest_main)
+target_link_libraries(${TARGET_LAYER2_API} gtest gtest_main)
 target_link_libraries(${TARGET_DIR_API} gtest gtest_main)
 
 # add test to activate ctest -VV
