--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -51,7 +51,6 @@ add_executable(${TARGET_DIR_API}
 # Link Google Test to your test executables
 target_link_libraries(${TARGET_LAYER0} gtest gtest_main)
 target_link_libraries(${TARGET_LAYER1_API} gtest gtest_main)
-target_link_libraries(${TARGET_LAYER2_API} gtest gtest_main)
 target_link_libraries(${TARGET_DIR_API} gtest gtest_main)
 
 # add test to activate ctest -VV
@@ -59,3 +58,15 @@ add_test(NAME ${TARGET_LAYER0} COMMAND sudo ./${TARGET_LAYER0} ${DIR_PLACE})
 add_test(NAME ${TARGET_LAYER1_API} COMMAND sudo ./${TARGET_LAYER1_API} ${DIR_PLACE})
 add_test(NAME ${TARGET_LAYER2_API} COMMAND sudo ./${TARGET_LAYER2_API} ${DIR_PLACE})
 add_test(NAME ${TARGET_DIR_API} COMMAND sudo ./${TARGET_DIR_API} ${DIR_PLACE})
+
+
+# Add the -Wall flag
+target_compile_options(${TARGET_LAYER2_API} PRIVATE -Wall)
+
+# Use pkg-config to get flags for fuse3
+find_package(PkgConfig REQUIRED)
+pkg_search_module(FUSE3 REQUIRED fuse3)
+
+# Add the flags from pkg-config for fuse3
+target_include_directories(${TARGET_LAYER2_API} PRIVATE ${FUSE3_INCLUDE_DIRS})
+target_link_libraries(${TARGET_LAYER2_API} PRIVATE ${FUSE3_LIBRARIES} gtest gtest_main)
